# just-a-uri

./: CMakeLists.txt  LICENSE  README.md
include/: uri.h
source/: main.cpp  uri.cpp
test/: CMakeLists.txt  test_main.cpp  test_uri.cpp
